--- a/windows.adoc
+++ b/windows.adoc
@@ -32,8 +32,8 @@ fluent-gem install fluent-plugin-windows-eventlog
 === *Step 3:* Prepare the config
 
 Open `C:\opt\td-agent\etc\td-agent\td-agent.conf` and add following
-entries. Please replace `CUSTOMER_TOKEN` with the token provided to you
-in the email. The `YOUR_IP` value should be replaced with the IP you
+entries. Please replace `CUSTOMER_TOKEN` with the value available in *Customer Tokens* section of
+the user portal. The `YOUR_IP` value should be replaced with the IP you
 want the logs be visible as the source.
 
 [source,xml]
