Updated Node.js article

--- a/nodejs.adoc
+++ b/nodejs.adoc
@@ -1,71 +1,40 @@
 :source-highlighter: highlight.js
 
-= NodeJS using `fluent-logger`
+= Node.js
 
-=== *Step 1:* Add `fluent-logger` dependency
+=== *Step 1:* Install `logsense` dependency
 
-Include fluent-logger in your `package.json`, e.g.:
-
-[source, json]
+[source, bash]
 ----
-"devDependencies": {
-  ...
-  "fluent-logger": "^3.2.2"
-  ...
-}
+npm i logsense
 ----
 
-=== *Step 2:* Create logger instance and a function for wrapping logs
+=== *Step 2:* Initialize logsense in your main file
 
 [source, javascript]
 ----
-const customerToken = "YOUR CUSTOMER TOKEN"
-const tag = 'nodejs'
-
-const FluentLogger = require('fluent-logger')
-const fluent = FluentLogger.createFluentSender(tag, {
-      host: 'logs.logsense.com',
-      port: 32714,
-      timeout: 0.0,
-      reconnectInterval: 100,
-      requireAckResponse: true,
-      enableReconnect: false,
-      tls: true
-    })
-
-function emitLog(message, data={}, callback) {
-  const fluentMessage = {
-    // This is required key, used to identify and authorize client
-    cs_customer_token: customerToken,
-    // This one makes `message` key a subject to pattern discovery
-    cs_pattern_key: 'message',
-    // This puts the message as `message`
-    message: message,
-    ...data
-  }
-
-  fluent.emit(tag,
-    fluentMessage,
-    callback)
-}
-
+const logsense = require('logsense')('CUSTOMER_TOKEN')
 ----
 
 Please replace `CUSTOMER_TOKEN` with the value available in *Customer Tokens* section of the user portal.
 
-=== *Step 3:* Use the function
+=== *Step 3:* Capture logs
 
-The function can be used directly, e.g.
+Capture all console statements by adding:
 
 [source, javascript]
 ----
-emitLog("Test message", {key: 'value'})
+logsense.install()
 ----
 
-It can be also integrated with other libraries such as
-https://github.com/fluent/fluent-logger-node#logging-library-support[winston]
-or https://www.npmjs.com/package/log4js-fluent-appender[log4js]. There
-are examples on how this could be accomplished at
-https://github.com/fluent/fluent-logger-node#logging-library-support[fluent-logger-node]
-page.
+or, for Winston:
 
+[source, javascript]
+----
+logger.add(new logsense.WinstonTransport())
+----
+
+=== *Step 4:* Start logging
+
+By adding `logsense.install()` in your main file, all `console` statements will be sent to LogSense.
+If you want to send structured logs, pass an object as the last `console` statement argument.
